--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+GiantBombKey = "95611fcc9fb8d7230247f15071db20a2e17aec7c"
+
